<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.trainingtimer.MainActivityViewModel" />

        <import type="com.example.trainingtimer.ConfigSettingType"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/startWaitTime"
            android:textSize="20sp" />

        <!--    開始までの待機時間-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startWaitTime_minus_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/minusBtn"
                android:tag="@{ConfigSettingType.StartWaitTime}"
                android:onClick="@{v->viewModel.changeSetting(v,-1)}"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.startWaitTimeStr}"
                android:textSize="25sp" />

            <Button
                android:id="@+id/startWaitTime_plus_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:tag="@{ConfigSettingType.StartWaitTime}"
                android:onClick="@{v->viewModel.changeSetting(v,1)}"
                android:text="@string/plusBtn"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/trainingTime"
            android:textSize="20sp" />

        <!--    トレーニングする時間 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:tag="@{ConfigSettingType.TrainingTime}"
                android:onClick="@{v->viewModel.changeSetting(v,-1)}"
                android:text="@string/minusBtn"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.TrainingTimeStr}"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:tag="@{ConfigSettingType.TrainingTime}"
                android:onClick="@{v->viewModel.changeSetting(v,1)}"
                android:text="@string/plusBtn"
                android:textSize="20sp" />

        </LinearLayout>

        <!--    休憩時間-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/restTime"
            android:textSize="20sp" />

        <!--    休憩する時間 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:tag="@{ConfigSettingType.RestTime}"
                android:onClick="@{v->viewModel.changeSetting(v,-1)}"
                android:text="@string/minusBtn"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.RestTimeStr}"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:tag="@{ConfigSettingType.RestTime}"
                android:onClick="@{v->viewModel.changeSetting(v,1)}"
                android:text="@string/plusBtn"
                android:textSize="20sp" />

        </LinearLayout>

        <!--    何回繰り返すか-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/repeatCount"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:tag="@{ConfigSettingType.RepeatCount}"
                android:onClick="@{v->viewModel.changeSetting(v,-1)}"
                android:text="@string/minusBtn"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.RepeatCountStr}"
                android:textSize="25sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:tag="@{ConfigSettingType.RepeatCount}"
                android:onClick="@{v->viewModel.changeSetting(v,1)}"
                android:text="@string/plusBtn"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/confirmBtn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cancelBtn" />
        </LinearLayout>

    </LinearLayout>
</layout>